# ASL-LatticeBoltzmann

./: .clang-format  .clang-format2  .env  .gitignore  .gitlab-ci.yml  README.md
2D/: .env  2D  Makefile  benchmark.py  benchmark_nodrift.py  compare.py  main.cpp  main_base.cpp  newbenchmark.py  plot.py  requirements.txt  sizevscyclesplot.py  sizevscyclesplot_report.py  timing.py
2D/backlog/: main.cpp
2D/include/: profile.c  profile.h  utils.c  utils.h
2D/include/profiling/: profile.h
2D/previous_versions/_v13/: .env
2D/previous_versions/_v13/src/: main.cpp
2D/previous_versions/_v4/: .env
2D/previous_versions/_v4/src/: main.cpp
2D/previous_versions/_v5/: .env
2D/previous_versions/_v5/src/: main.cpp
2D/previous_versions/_v5/src/include/: utils.h
2D/previous_versions/_v6/: .env
2D/previous_versions/_v6/src/: main.cpp
2D/previous_versions/_v8/: .env
2D/previous_versions/_v8/src/: main.cpp
2D/previous_versions/_v_shadow_indexing/: .env
2D/previous_versions/v0/: .env  main.cpp
2D/previous_versions/v0/include/: profile.c  profile.h
2D/previous_versions/v1/: .env  main.cpp  main_optimized.cpp
2D/previous_versions/v1/include/: npy.hpp
2D/previous_versions/v1/src/: main.cpp
2D/previous_versions/v1/src/include/: utils.h
2D/previous_versions/v10/: .env
2D/previous_versions/v10/src/: main.cpp
2D/previous_versions/v11/: .env
2D/previous_versions/v11/src/: main.cpp
2D/previous_versions/v12/: .env
2D/previous_versions/v12/src/: main.cpp
2D/previous_versions/v2/: .env  main.cpp
2D/previous_versions/v2/include/: utils.h
2D/previous_versions/v2/src/: main.cpp
2D/previous_versions/v3/: .env  main.cpp
2D/previous_versions/v3/include/: utils.c
2D/previous_versions/v3/src/: main.cpp
2D/previous_versions/v4/: .env  main.cpp
2D/previous_versions/v4/include/: profile.h
2D/previous_versions/v4/src/: main.cpp
2D/previous_versions/v5/: .env
2D/previous_versions/v5/src/: main.cpp
2D/previous_versions/v6/: .env
2D/previous_versions/v6/src/: main.cpp
2D/previous_versions/v7/: .env
2D/previous_versions/v7/src/: main.cpp
2D/previous_versions/v8/: .env
2D/previous_versions/v8/src/: main.cpp
2D/previous_versions/v9/: .env
2D/previous_versions/v9/src/: main.cpp
2D/reference-python/: latticeboltzmann_prints.py
2D/results/: test_result.txt
2D/src/: main.cpp  main_base.cpp
2D/src/include/: profile.c  utils.c  utils.h
3D/: Makefile  README.md  benchmark.py  benchmark_nostream.py  compare.py  sizevscyclesplot.py  sizevscyclesplot_report.py
3D/previous_versions/_v12/src/: CMakeLists.txt
3D/previous_versions/_v12/src/cmdline/: main.cpp
3D/previous_versions/_v2/: .env
3D/previous_versions/_v2/src/LBM/headers/: utils.h
3D/previous_versions/_v3/: .env
3D/previous_versions/_v3/src/LBM/include/: utils.cpp
3D/previous_versions/_v4/: .env
3D/previous_versions/_v66/: .env
3D/previous_versions/_v66/src/cmdline/: main.cpp
3D/previous_versions/_v8/src/: CMakeLists.txt
3D/previous_versions/_v8/src/cmdline/: main.cpp
3D/previous_versions/v0/: .env
3D/previous_versions/v0/src/: .gitignore  CMakeLists.txt  major_version
3D/previous_versions/v0/src/LBM/headers/: profile.h  utils.h
3D/previous_versions/v0/src/LBM/include/: profile.cpp  utils.cpp
3D/previous_versions/v0/src/cmdline/: .gitignore  main.cpp  main_base.cpp  options.json
3D/previous_versions/v1/: .env
3D/previous_versions/v1/src/: CMakeLists.txt
3D/previous_versions/v1/src/cmdline/: .gitignore  main.cpp
3D/previous_versions/v10/: .env
3D/previous_versions/v10/src/: CMakeLists.txt
3D/previous_versions/v10/src/cmdline/: main.cpp
3D/previous_versions/v11/: .env
3D/previous_versions/v11/src/cmdline/: main.cpp
3D/previous_versions/v12/: .env
3D/previous_versions/v13/: .env
3D/previous_versions/v13/src/cmdline/: main.cpp
3D/previous_versions/v2/: .env
3D/previous_versions/v2/src/: CMakeLists.txt  major_version
3D/previous_versions/v2/src/cmdline/: main.cpp
3D/previous_versions/v3/: .env
3D/previous_versions/v3/src/: CMakeLists.txt
3D/previous_versions/v3/src/LBM/headers/: profile.h  utils.h
3D/previous_versions/v3/src/LBM/include/: profile.cpp  utils.cpp
3D/previous_versions/v3/src/cmdline/: main.cpp
3D/previous_versions/v4/: .env
3D/previous_versions/v4/src/cmdline/: main.cpp
3D/previous_versions/v5/: .env
3D/previous_versions/v5/src/cmdline/: main.cpp
3D/previous_versions/v6/: .env
3D/previous_versions/v6/src/: CMakeLists.txt
3D/previous_versions/v6/src/cmdline/: main.cpp
3D/previous_versions/v7/: .env
3D/previous_versions/v7/src/: CMakeLists.txt
3D/previous_versions/v7/src/cmdline/: main.cpp
3D/previous_versions/v8/: .env
3D/previous_versions/v9/: .env
3D/previous_versions/v9/src/: CMakeLists.txt
3D/previous_versions/v9/src/cmdline/: main.cpp
3D/src/: CMakeLists.txt
3D/src/LBM/headers/: utils.h
3D/src/LBM/include/: utils.cpp
3D/src/cmdline/: main.cpp
D3Q15/LBM-master/: CMakeLists.txt  README.md  compare.py  options.json
D3Q15/LBM-master/build_original/: Makefile  cmake_install.cmake  main_cmdline  options.json
D3Q15/LBM-master/cmdline/: backup_main  main.cpp  main.h  old_main.cpp
D3Q15/LBM-master/cmdline/include/: utils.cpp  utils.h
output/2024_4_26_17_56_35/: F.npy
tex/: 37_report.tex  bibl_conf.bib
(+19 files in other folders)
